--- a/GameMath_01/GameMath_01.vcxproj.filters
+++ b/GameMath_01/GameMath_01.vcxproj.filters
@@ -2,8 +2,9 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MathUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Math.h" />
+    <ClInclude Include="MathUtils.h" />
   </ItemGroup>
 </Project>
